force-app/main/default/objects/openq__Engagement_Plan_Settings__c/openq__Engagement_Plan_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Engagement Plan Settings</label>
</CustomObject>