force-app/main/default/objects/openq__Engagement_Plan_Settings__c/fields/openq__Gauge_Breakpoint_2__c.field-meta.xml
<CustomField>
    <fullName>openq__Gauge_Breakpoint_2__c</fullName>
    <defaultValue>75</defaultValue>
    <label>Breakpoint 2</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>