force-app/main/default/objects/openq__Engagement_Plan_Settings__c/fields/openq__Gauge_Minimum__c.field-meta.xml
<CustomField>
    <fullName>openq__Gauge_Minimum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>