force-app/main/default/objects/openq__Engagement_Plan_Settings__c/fields/openq__Major_Tick_Marks__c.field-meta.xml
<CustomField>
    <fullName>openq__Major_Tick_Marks__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Major Tick Marks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>