force-app/main/default/objects/openq__Engagement_Plan_Settings__c/fields/openq__Show_Percentage__c.field-meta.xml
<CustomField>
    <fullName>openq__Show_Percentage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Percentage</label>
    <type>Checkbox</type>
</CustomField>